2010-05-11  Andreas Seltenreich  <seltenreich@gmx.de>

	* gnus-sum.el (gnus-summary-kill-thread): Use gnus-summary-mark-article
	instead of g-s-m-a-as-unread to set the expirable mark.  (Bug#5284)

2010-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-extern.el (mm-extern-url): Don't use
	mm-with-unibyte-current-buffer.
	(mm-extern-cache-contents): Use with-current-buffer instead of
	save-excursion + set-buffer.

2010-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-emacs-mule): Remove.

2010-05-10  Andreas Seltenreich  <seltenreich@gmx.de>

	* gnus-sum.el (gnus-summary-mode): Don't make minor-mode-alist
	buffer-local as it's incompatible with Stefan Monnier's 2010-05-03
	change.

2010-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-with-unibyte-current-buffer): Redefine it so as not to
	bind the default value of enable-multibyte-characters to nil.

2010-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-forward-make-body-plain)
	(message-forward-make-body-mml):
	Don't use mm-with-unibyte-current-buffer.

2010-05-07  Christian von Roques  <roques@mti.ag>  (tiny change)

	* mml2015.el (mml2015-epg-find-usable-key): Skip disabled key
	(Bug#5592).

2010-05-07  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-mime-pipe-part): Add optional argument `cmd'; pass
	it to mm-pipe-part.

	* mm-decode.el (mm-pipe-part): Add optional argument `cmd'; use it if
	it is given.

2010-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnweb.el (nnweb-gmane-search)
	* yenc.el (yenc-decode-region): Don't run set-buffer-multibyte for
	XEmacs.

	* gnus-art.el (gnus-article-browse-html-parts)
	* gnus-group.el (gnus-read-ephemeral-gmane-group)
	(gnus-read-ephemeral-bug-grou): Use mm-make-temp-file instead of
	make-temp-file.

	* gnus-dired.el (gnus-dired-mode): Bind gnus-dired-mode-hook,
	gnus-dired-mode-on-hook and gnus-dired-mode-off-hook for XEmacs when
	compiling.

	* gnus-ml.el (gnus-mailing-list-mode): Bind gnus-mailing-list-mode-hook,